--- a/arch/arm/configs/msm7627_defconfig
+++ b/arch/arm/configs/msm7627_defconfig
@@ -1048,12 +1048,16 @@ CONFIG_FB_MSM_LCDC=y
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 CONFIG_FB_MSM_MDDI_AUTO_DETECT=y
 CONFIG_FB_MSM_LCDC_PANEL=y
+CONFIG_FB_MSM_LCDC_ST15_WXGA=y
+# CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 CONFIG_FB_MSM_LCDC_PRISM_WVGA=y
+# CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
 CONFIG_FB_MSM_LCDC_GORDON_VGA=y
 CONFIG_FB_MSM_LCDC_TOSHIBA_WVGA_PT=y
 CONFIG_FB_MSM_LCDC_SHARP_WVGA_PT=y
 CONFIG_FB_MSM_LCDC_WXGA=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
+# CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_TOSHIBA_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SHARP_WVGA_PT_PANEL is not set
