--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -776,6 +776,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_PCA953X is not set
 # CONFIG_GPIO_PCF857X is not set
 CONFIG_GPIO_SX150X=y
+CONFIG_MPP_PMIC8901=y
 
 #
 # PCI GPIO expanders:
@@ -948,6 +949,8 @@ CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 CONFIG_FB_MSM_LCDC_PANEL=y
+# CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
+# CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA=y
 # CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
