--- a/arch/arm/configs/qsd8650-perf_defconfig
+++ b/arch/arm/configs/qsd8650-perf_defconfig
@@ -264,7 +264,7 @@ CONFIG_MSM_RPC_PING=y
 CONFIG_MSM_RPC_PROC_COMM_TEST=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
-# CONFIG_MSM_RMT_STORAGE_SERVER is not set
+# CONFIG_MSM_RMT_STORAGE_CLIENT is not set
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
@@ -1206,12 +1206,16 @@ CONFIG_FB_MSM_TVOUT=y
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 CONFIG_FB_MSM_MDDI_AUTO_DETECT=y
 CONFIG_FB_MSM_LCDC_PANEL=y
+CONFIG_FB_MSM_LCDC_ST15_WXGA=y
+# CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 CONFIG_FB_MSM_LCDC_PRISM_WVGA=y
+# CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
 CONFIG_FB_MSM_LCDC_GORDON_VGA=y
 CONFIG_FB_MSM_LCDC_TOSHIBA_WVGA_PT=y
 CONFIG_FB_MSM_LCDC_SHARP_WVGA_PT=y
 CONFIG_FB_MSM_LCDC_WXGA=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
+# CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_TOSHIBA_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SHARP_WVGA_PT_PANEL is not set
