--- a/arch/arm/configs/qsd8650a_defconfig
+++ b/arch/arm/configs/qsd8650a_defconfig
@@ -952,6 +952,7 @@ CONFIG_I2C_HELPER_AUTO=y
 #
 # CONFIG_I2C_GPIO is not set
 CONFIG_I2C_MSM=y
+CONFIG_I2C_QUP=y
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_SIMTEC is not set
 
@@ -1094,6 +1095,8 @@ CONFIG_FB_MSM_MDP31=y
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
+# CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
+# CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
