--- a/arch/arm/mach-msm/qdsp5v2/Makefile
+++ b/arch/arm/mach-msm/qdsp5v2/Makefile
@@ -8,3 +8,4 @@ obj-y += audpreproc.o audio_pcm_in.o audio_aac_in.o audio_amrnb_in.o
 obj-y += audio_evrc_in.o audio_qcelp_in.o
 obj-y += adsp.o adsp_driver.o adsp_info.o
 obj-y += audio_acdb.o snddev_virtual.o
+obj-y += audio_fm.o
