--- a/arch/arm/configs/msm7627-perf_defconfig
+++ b/arch/arm/configs/msm7627-perf_defconfig
@@ -307,6 +307,7 @@ CONFIG_ARM_THUMB=y
 CONFIG_OUTER_CACHE=y
 CONFIG_CACHE_L2X0=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
+# CONFIG_VCM is not set
 # CONFIG_ARM_ERRATA_411920 is not set
 
 #
@@ -678,7 +679,6 @@ CONFIG_ANDROID_PMEM_KAPI_TEST=m
 # CONFIG_UID_STAT is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
-CONFIG_APANIC_PLABEL="kpanic"
 # CONFIG_TSIF is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_C2PORT is not set
