--- a/arch/arm/configs/msm7630_defconfig
+++ b/arch/arm/configs/msm7630_defconfig
@@ -327,6 +327,7 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_HAS_TLS_REG=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
+# CONFIG_VCM is not set
 # CONFIG_ARM_ERRATA_430973 is not set
 # CONFIG_ARM_ERRATA_458693 is not set
 # CONFIG_ARM_ERRATA_460075 is not set
@@ -764,7 +765,6 @@ CONFIG_ANDROID_PMEM_KAPI_TEST=m
 # CONFIG_UID_STAT is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
-CONFIG_APANIC_PLABEL="kpanic"
 # CONFIG_TSIF is not set
 CONFIG_PMIC8058_PWM=y
 # CONFIG_HAPTIC_ISA1200 is not set
@@ -1702,6 +1702,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 CONFIG_RTC_DRV_MSM=y
 CONFIG_RTC_SECURE_TIME_SUPPORT=y
 # CONFIG_RTC_DRV_MSM7X00A is not set
+# CONFIG_RTC_PM8058 is not set
 # CONFIG_DMADEVICES is not set
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
