--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -271,6 +271,7 @@ CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 # CONFIG_MSM_NPA is not set
+# CONFIG_SMMU is not set
 
 #
 # Processor Type
@@ -299,6 +300,7 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_HAS_TLS_REG=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
+# CONFIG_VCM is not set
 # CONFIG_ARM_ERRATA_430973 is not set
 # CONFIG_ARM_ERRATA_458693 is not set
 # CONFIG_ARM_ERRATA_460075 is not set
@@ -514,7 +516,6 @@ CONFIG_ANDROID_PMEM_KAPI_TEST=m
 # CONFIG_ISL29003 is not set
 # CONFIG_UID_STAT is not set
 # CONFIG_APANIC is not set
-CONFIG_APANIC_PLABEL="kpanic"
 # CONFIG_TSIF is not set
 CONFIG_PMIC8058_PWM=y
 # CONFIG_HAPTIC_ISA1200 is not set
