--- a/arch/arm/configs/qsd8650a_defconfig
+++ b/arch/arm/configs/qsd8650a_defconfig
@@ -310,6 +310,7 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_HAS_TLS_REG=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
+# CONFIG_VCM is not set
 # CONFIG_ARM_ERRATA_430973 is not set
 # CONFIG_ARM_ERRATA_458693 is not set
 # CONFIG_ARM_ERRATA_460075 is not set
@@ -686,7 +687,6 @@ CONFIG_ANDROID_PMEM_KAPI_TEST=m
 # CONFIG_UID_STAT is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
-CONFIG_APANIC_PLABEL="kpanic"
 # CONFIG_TSIF is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_C2PORT is not set
