--- a/arch/arm/configs/qsd8650a-perf_defconfig
+++ b/arch/arm/configs/qsd8650a-perf_defconfig
@@ -269,7 +269,7 @@ CONFIG_MSM_RPCSERVER_HANDSET=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-CONFIG_MSM_HW3D=y
+# CONFIG_MSM_HW3D is not set
 CONFIG_MSM_QDSP6=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
@@ -514,6 +514,11 @@ CONFIG_ANDROID_PARANOID_NETWORK=y
 # CONFIG_IEEE802154 is not set
 # CONFIG_NET_SCHED is not set
 # CONFIG_DCB is not set
+#
+#
+# Graphics support
+CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_MMU=y
 
 #
 # Network testing
