--- a/arch/arm/configs/msm7627_defconfig
+++ b/arch/arm/configs/msm7627_defconfig
@@ -1005,7 +1005,7 @@ CONFIG_SSB_POSSIBLE=y
 CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
-# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
+CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
