--- a/drivers/gpu/msm/Kconfig
+++ b/drivers/gpu/msm/Kconfig
@@ -1,7 +1,7 @@
 config MSM_KGSL
 	tristate "MSM 3D Graphics driver"
 	default n
-	depends on FB && ARM && (ARCH_QSD8X50 || ARCH_MSM7X27 || ARCH_MSM7X30) && !MSM_HW3D && ANDROID_PMEM
+	depends on FB && ARM && ARCH_MSM && !MSM_HW3D && ANDROID_PMEM
 	select GENERIC_ALLOCATOR
 	select FW_LOADER
 	---help---
